--- a/understanding/index.html
+++ b/understanding/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image" href="##" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Understanding</title>
+  <title>Understandingg</title>
 </head>
 
 <body>
