--- a/understanding/index.html
+++ b/understanding/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image" href="##" />
+  <link rel="icon" type="image/x-icon" href="src/Assets/favicon_io/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Understandingg</title>
+  <title>Uzee</title>
 </head>
 
 <body>
